doc: add a command about config

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -24,6 +24,8 @@ cd expression-viewer
 # Create virtual environment
 python3 -m venv venv
 source venv/bin/activate
+# Create config.json
+cp _config.json config.json
 # Install dependent libraries
 pip install -r requirements.txt
 # Start MongoDB
